Bug 1533308 - Report rejected non-exception objects to the console, r=kmag,arai.

--HG--
extra : rebase_source : a226e104ffac8b7db1c5cde797cb0fbe438c1c65